Add support for different formats
