# generated/models/inputs.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"encoding/json"
+	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/validate"
 	"strconv"
 )
@@ -10,12 +11,17 @@ import (
 var _ = json.Marshal
 var _ = strconv.FormatInt
 var _ = validate.Maximum
+var _ = strfmt.NewFormats
 
 type GetBooksInput struct {
-	Author    *string
-	Available *bool
-	State     *string
-	MaxPages  *float64
+	Author      *string
+	Available   *bool
+	State       *string
+	Published   *strfmt.Date
+	Completed   *strfmt.DateTime
+	MaxPages    *float64
+	MinPages    *int32
+	PagesToTime *float32
 }
 
 func (i GetBooksInput) Validate() error {
@@ -24,15 +30,15 @@ func (i GetBooksInput) Validate() error {
 		return err
 	}
 
-	if err := validate.Maximum("maxPages", "query", *i.MaxPages, 1.000000, false); err != nil {
+	if err := validate.Maximum("maxPages", "query", float64(*i.MaxPages), 1.000000, false); err != nil {
 		return err
 	}
 
-	if err := validate.Minimum("maxPages", "query", *i.MaxPages, -5.000000, false); err != nil {
+	if err := validate.Minimum("maxPages", "query", float64(*i.MaxPages), -5.000000, false); err != nil {
 		return err
 	}
 
-	if err := validate.MultipleOf("maxPages", "query", *i.MaxPages, 0.500000); err != nil {
+	if err := validate.MultipleOf("maxPages", "query", float64(*i.MaxPages), 0.500000); err != nil {
 		return err
 	}
 	return nil
@@ -41,15 +47,16 @@ func (i GetBooksInput) Validate() error {
 type GetBookByIDInput struct {
 	BookID        int64
 	Authorization *string
+	RandomBytes   *[]byte
 }
 
 func (i GetBookByIDInput) Validate() error {
 
-	if err := validate.MaximumInt("bookID", "path", i.BookID, 10000000, false); err != nil {
+	if err := validate.MaximumInt("bookID", "path", i.BookID, int64(10000000), false); err != nil {
 		return err
 	}
 
-	if err := validate.MinimumInt("bookID", "path", i.BookID, 2, false); err != nil {
+	if err := validate.MinimumInt("bookID", "path", i.BookID, int64(2), false); err != nil {
 		return err
 	}
 
@@ -57,15 +64,15 @@ func (i GetBookByIDInput) Validate() error {
 		return err
 	}
 
-	if err := validate.MaxLength("authorization", "header", *i.Authorization, 24); err != nil {
+	if err := validate.MaxLength("authorization", "header", string(*i.Authorization), 24); err != nil {
 		return err
 	}
 
-	if err := validate.MinLength("authorization", "header", *i.Authorization, 24); err != nil {
+	if err := validate.MinLength("authorization", "header", string(*i.Authorization), 24); err != nil {
 		return err
 	}
 
-	if err := validate.Pattern("authorization", "header", *i.Authorization, "[0-9a-f]+"); err != nil {
+	if err := validate.Pattern("authorization", "header", string(*i.Authorization), "[0-9a-f]+"); err != nil {
 		return err
 	}
 	return nil
